--- a/singolo1.css
+++ b/singolo1.css
@@ -165,9 +165,71 @@ div.right:hover{
     height: 6px;
     background-color: #ea676b;
 }
-div.footer{
+section.footer{
     width: 1020px;
     height: 495px;
-    background-color: #f2f2f2;
+    background-color: #f2f2f2;  
 }
+.footer h2{
+    font-size: 30px;
+    line-height: 18px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+    margin-left: 40px;
+    margin-top: 0;
+    padding-top:60px;
+    
+}
+.footer p{
+    width: 940px;
+    font-size: 18px;
+    line-height: 30px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 300;
+    text-align: left;
+    margin-left: 40px;
+    margin-top: 0px;
+}
+.flexbox{
+    display: flex;
+    flex-wrap: wrap;
+}
+article{
+    width:320px;
+    height: 120px;
+    flex-basis: 30%;
+}
+article img{
+    float:left;
+    margin:30px;
+    width:50px;
+    height: 50px;
+}
+.flexbox article:nth-of-type(1){
+    margin-left: 40px;
+}
+.flexbox article:nth-of-type(1) h3{
+    font-size: 18px;
+    line-height: 18px;
+    color: #666d89;
+    font-family: "Lato";
+    font-weight: 900;
+    text-align: left;
+}
+.flexbox article:nth-of-type(1) p{
+    width: 219px;
+    height: 128px;
+    font-size: 12px;
+    line-height: 22px;
+    color: #767e9e;
+    font-family: "Lato";
+    font-weight: 400;
+    text-align: left;
+}
+.footer article:nth-of-type(4){
+    margin-left: 40px;
+ }
 
