--- a/singolo1.css
+++ b/singolo1.css
@@ -183,8 +183,8 @@ section.footer{
     
 }
 .footer p{
-    width: 940px;
-    font-size: 18px;
+    width: 950px;
+    font-size: 16px;
     line-height: 30px;
     color: #767e9e;
     font-family: "Lato";
@@ -198,30 +198,28 @@ section.footer{
     flex-wrap: wrap;
 }
 article{
-    width:320px;
-    height: 120px;
-    flex-basis: 30%;
+    flex-basis: 300px;
 }
 article img{
     float:left;
     margin:30px;
-    width:50px;
-    height: 50px;
+    height:50px;
 }
 .flexbox article:nth-of-type(1){
-    margin-left: 40px;
-}
-.flexbox article:nth-of-type(1) h3{
+    margin-left: 10px;
+    }
+.flexbox article h3{
     font-size: 18px;
     line-height: 18px;
     color: #666d89;
     font-family: "Lato";
     font-weight: 900;
     text-align: left;
+    padding-top: 10px;
+    
 }
-.flexbox article:nth-of-type(1) p{
-    width: 219px;
-    height: 128px;
+.flexbox article p{
+    width:290px;
     font-size: 12px;
     line-height: 22px;
     color: #767e9e;
@@ -230,6 +228,10 @@ article img{
     text-align: left;
 }
 .footer article:nth-of-type(4){
-    margin-left: 40px;
+    margin-left: 10px;
  }
-
+.bottomStr{
+    width: 1020px;
+    height: 6px;
+    background-color: #ffffff;
+}
